Add more files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# backup files #
+################
+*~
+
+# OS generated files #
+######################
+.DS_Store?
+Icon?
+Thumbs.db
+
 # Prerequisites
 *.d
 
