Add artifact settings, again...

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -15,3 +15,11 @@ blocks:
             - xcversion select 11.3.1
             - checkout
             - ./compiler-build.sh
+      epilogue:
+        on_pass:
+          commands:
+            - artifact push project PIC32-MCU-Compiler/zips/pic32-tools-Compiler-2.40-Darwin-image.tar.gz
+            - artifact push project PIC32-MCU-Compiler/zips/pic32-tools-Compiler-2.40-Darwin-image.sha256
+        on_fail:
+          commands:
+            - artifact push job --expire-in 2w PIC32-MCU-Compiler/Compiler-2.40.log
