--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -5,13 +5,14 @@ agent:
     type: a1-standard-4
     os_image: macos-mojave-xcode11
 execution_time_limit:
-  hours: 12
+  hours: 20
 blocks:
   - name: 'Block #1'
     task:
       jobs:
         - name: 'Job #1'
           commands:
+            - rm -Rf ~/.rbenv
             - rm -Rf ~/.cocoapods
             - rm -Rf ~/.flutter
             - rm -Rf ~/.gradle
